--- a/gradle.properties
+++ b/gradle.properties
@@ -22,22 +22,29 @@ neo_version_range=[21.1.0,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
+irons_spells_version=1.21.1-3.12.0
+geckolib_version=1.21.1:4.7.5.1
+curios_version=9.2.2
+player_animator_version=2.0.1+1.21.1
+jei_mc_version=1.21
+jei_version=19.5.0.32
+
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
+mod_id=spells_of_mm
 # The human-readable display name for the mod.
-mod_name=Example Mod
+mod_name=Spells of Mass & Motion
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
+mod_group_id=net.alshanex.spells_of_mm
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors=Alshanex, Elle
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=Addon for Iron Spells adding a new gravity based school.
